releases/development/apis/echo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo
  namespace: dev
spec:
  ports:
  - name: high
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: low
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: echo
  type: ClusterIP
---
